--- a/src/includes/langs/es.ini
+++ b/src/includes/langs/es.ini
@@ -638,7 +638,7 @@ start_stream_now = "Iniciar transmisión ahora"
 start_typing = "Empieza a escribir para buscar"
 station_name = "Nombre de la estación"
 station_url = "URL de la estación"
-stations = "Estaciones"
+stations = "Estaciones de radio"
 status = "Estado"
 stream = "Arroyo"
 stream_errors = "Errores de transmisión"
